# CmakeExample

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  ReadMe.md
app/: CMakeLists.txt
app/exampleapp/: CMakeLists.txt  Example.cpp
ext/googletest/: CMakeLists.txt
lib/: CMakeLists.txt
lib/examplelib/: CMakeLists.txt  Example.cpp
lib/examplelib/inc/: Example.h
test/: CMakeLists.txt
test/exampletest/: CMakeLists.txt  ExampleTest.cpp
tools/cmakes/: lint.cmake
